styles/Header.module.css
.header {
  width: 100%;
  border-bottom: 1px solid var(--shadow);
  background: var(--bg);
  height: 100px;
  margin-bottom: 50px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.content {
  width: 100%;
  padding-top: 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.title,
.title a {
  font-size: 30px;
  line-height: 35px;
  margin: 0;
  box-shadow: none;
  text-decoration: none;
  color: var(--fg);
}

.description {
  margin: 0;
  font-size: 1rem;
  line-height: 1rem;
  letter-spacing: -1px;
  color: var(--fgSecondary);
  font-weight: 400;
}

.titleContainer {
  float: left;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.titleImage {
  float: left;
}

.titletext {
  float: right;
}

.menu {
  float: right;
  color: var(--fg);
  box-shadow: none;
  text-decoration: none;
}

.menu a {
  color: var(--fg);
  box-shadow: none;
  text-decoration: none;
  margin-left: 20px;
}

.menu a:first-child {
  margin-left: 0;
}

.menu a:hover {
  color: var(--blue);
}

@media only screen and (max-width: 750px) {
  .header {
    height: 150px;
  }

  .content {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }

  .titleContainer {
    margin-bottom: 20px;
    text-align: center;
  }
}

